Refactor: Change assignments